# dupe-finder

./: README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: check.yaml
src/dupe_finder/: main.py
tests/: test_main.py
