[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dupe_finder"]

[project]
name = "dupe-finder"
version = "0.1.0"
description = "A tool to find duplicate files in a directory"
requires-python = ">= 3.8"
license = "MIT"
readme = "README.md"
dependencies = ["typer[all]"]

[project.scripts]
dupe-finder = "dupe_finder.main:app"
